# JNIDemo

./: README.md  settings.gradle
app/: build.gradle
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/jnidemo/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
testapp/: CMakeLists.txt  build.gradle
testapp/src/main/: AndroidManifest.xml
testapp/src/main/cpp/: array_operation.cpp  com_example_testapp_MainActivity.h  file_operation.cpp  hello-ndk.cpp
testapp/src/main/java/com/example/testapp/: Config.java  Encryptor.java  JniArrayOperation.java  JniFileOperation.java  MainActivity.java
testapp/src/main/res/layout/: activity_main.xml
